Get version from spec-tests